--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"em busca da cidade perdida"</title>
+    <title>"Som da liberdade"</title>
 </head>
 <body>
-    <main></main>
+    <main>
+        <div>
+         <p>"Num lugar que era feito de tristeza, silêncioso como nenhum outro, assim era aquele vilarejo. Marcado pela dor,contudo nascera uma flor num lugar onde nem a luz do sol transparesia, era lá onde  a esperança brotava num coração de uma jovem"
+            
+         </p>
+        </div>
 
 
     
